# matrix

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  main_workspace.code-workspace  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature_added.md  stable_release.md
.github/workflows/: codeql-analysis.yml
img/: README.md
include/libmatrix/: libmatrix.h  matrix.h  matrix.hpp
src/: Matrix.cpp  Matrix.h  MatrixTemplate.h
test/: init_int_square_matrix.cpp  int_square_matrix_test.cpp
tests/: int_square_matrix_test.cpp
tests/generic/: test_transpose.cpp
tests/operators/: test_copy_constructor.cpp  test_matrix_addition.cpp  test_matrix_multiplication.cpp  test_matrix_subtraction.cpp  test_round_bracket.cpp  test_scalar_multiplication.cpp
